--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
             "last 1 safari version"
         ]
     },
-    "homepage": "https://JJacsang.github.io/react-for-beginners"
+    "homepage": "https://Sangwoo.github.io/react-for-beginners"
 }
